coverage; requirements_dev

--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,7 @@
 envlist = py33,py34,py35
 
 [testenv]
-deps = nose
-commands = nosetests
+deps =
+    nose
+    coverage
+commands = nosetests --with-coverage
