Move to py.test

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,5 @@
 envlist = py33,py34,py35
 
 [testenv]
-deps =
-    nose
-    coverage
-commands = nosetests --with-coverage
+deps = pytest-cov
+commands = py.test {posargs}
