--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ python:
   - 3.3
   - 3.4
   - 3.5
-install:
-  - pip install -r requirements_dev.txt
-  - pip install coveralls
-script:
-  - nosetests --with-coverage
-after_success:
-  coveralls
+install: pip install tox-travis coveralls
+script: tox -- --cov
+after_success: coveralls
