Add temp workaround for typecheck-decorator 'typing' issue; test with Python 3.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ python:
   - 3.3
   - 3.4
   - 3.5
+  - 3.6
 install: pip install tox-travis coveralls
 script: tox -- --cov
 after_success: coveralls
+matrix:
+  allow_failures:
+  - python: 3.6
