--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
-envlist = py33,py34,py35
+envlist = py33,py34,py35,py36
 
 [testenv]
 deps = pytest-cov
 commands = py.test {posargs}
+
+[testenv:py36]
+ignore_outcome = true
