--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
 python:
-  - 3.3
   - 3.4
   - 3.5
   - 3.6
+  - 3.7-dev
 install: pip install tox-travis coveralls
 script: tox -- --cov
 after_success: coveralls
-matrix:
-  allow_failures:
-  - python: 3.6
