--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,6 @@
 [tox]
-envlist = py33,py34,py35,py36
+envlist = py34,py35,py36,py37
 
 [testenv]
 deps = pytest-cov
-commands = py.test {posargs}
-
-[testenv:py36]
-ignore_outcome = true
+commands = pytest {posargs}
