--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 addopts = --verbose
 python_files = test_polypie.py
+filterwarnings =
+    default
+    ignore:Using or importing the ABCs from 'collections':DeprecationWarning:typeguard
