--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
-envlist = py34,py35,py36,py37
+envlist = py34,py35,py36,py37,flake8
 
 [testenv]
 deps = pytest-cov
 commands = pytest {posargs}
+
+[testenv:flake8]
+skip_install = true
+deps = flake8
+commands = flake8 polypie.py setup.py tests
