--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+dist: xenial
 language: python
 python:
   - 3.4
   - 3.5
   - 3.6
-  - 3.7-dev
+  - 3.7
 install: pip install tox-travis coveralls
 script: tox -- --cov
 after_success: coveralls
